[tool.poetry]
name = "testby-alexeymarusich"
version = "0.1.0"
description = ""
authors = ["MikitaTratsiuk"]
readme = "README.md"
packages = [{include = "testby_alexeymarusich"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
validators = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
